lots of code cleaning

--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -2,26 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.10.0</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m10.0\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from manim import *\n",
     "from pathlib import Path\n",
@@ -36,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "id": "3d228c15",
    "metadata": {},
    "outputs": [
@@ -59,16 +43,14 @@
     "        d = Dot(color = YELLOW)\n",
     "        self.add(d)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"Dot.png\"\n",
+    "image_full_name = \"Dot.png\"\n",
     "snippet = \"d = Dot(color = YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "ad594e35",
    "metadata": {},
    "outputs": [
@@ -92,16 +74,14 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"Circle.png\"\n",
+    "image_full_name = \"Circle.png\"\n",
     "snippet = \"circle = Circle(color= YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "id": "ce890072-a608-4654-941b-198b4dd37280",
    "metadata": {},
    "outputs": [
@@ -126,16 +106,14 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"Arc.png\"\n",
+    "image_full_name = \"Arc.png\"\n",
     "snippet = \"mob= Arc(radius=1.3, start_angle=-PI/16, angle=PI,color= YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "id": "cd2434de-f766-4d7d-9aee-af607580a62b",
    "metadata": {},
    "outputs": [
@@ -160,16 +138,14 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"Ellipse.png\"\n",
+    "image_full_name = \"Ellipse.png\"\n",
     "snippet = \"mob = Ellipse(color = YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "id": "78d4b603",
    "metadata": {},
    "outputs": [
@@ -193,16 +169,14 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"Square.png\"\n",
+    "image_full_name = \"Square.png\"\n",
     "snippet = \"square = Square(color= YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "ca89b62d",
    "metadata": {},
    "outputs": [
@@ -227,16 +201,14 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"Star.png\"\n",
+    "image_full_name = \"Star.png\"\n",
     "snippet = \"star = Star(color = YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "9075a9c7-0eff-4eea-8ce7-dc533bc54120",
    "metadata": {},
    "outputs": [
@@ -261,16 +233,14 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"Triangle.png\"\n",
+    "image_full_name = \"Triangle.png\"\n",
     "snippet = \"mob = Triangle(color = YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "bc54081a",
    "metadata": {},
    "outputs": [
@@ -294,16 +264,14 @@
     "        mob.scale(0.1)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"Line.png\"\n",
+    "image_full_name = \"Line.png\"\n",
     "snippet = \"line = Line(color= YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "214af3ad-d1a0-446b-bb8d-6d02304ffaec",
    "metadata": {},
    "outputs": [
@@ -327,16 +295,14 @@
     "        self.camera.frame.scale(1/25)\n",
     "        \n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"DashedLine.png\"\n",
+    "image_full_name = \"DashedLine.png\"\n",
     "snippet = \"mob = DashedLine(color= YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "8f13d671-c505-4993-b1a2-9c61dc28c83f",
    "metadata": {},
    "outputs": [
@@ -359,16 +325,14 @@
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"Arrow.png\"\n",
+    "image_full_name = \"Arrow.png\"\n",
     "snippet = \"mob = Arrow(color= YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "2616b54b-98c4-4171-bec6-7e9cdf55968a",
    "metadata": {},
    "outputs": [
@@ -391,16 +355,14 @@
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/25)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"DoubleArrow.png\"\n",
+    "image_full_name = \"DoubleArrow.png\"\n",
     "snippet = \"mob = DoubleArrow(color= YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "8120aa72-aa99-4078-9859-a8fada7c9167",
    "metadata": {},
    "outputs": [
@@ -423,16 +385,14 @@
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/10)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"ParametricFunction.png\"\n",
+    "image_full_name = \"ParametricFunction.png\"\n",
     "snippet = \"mob = ParametricFunction(lambda t: [t,0.2*np.sin(10*t),0],t_range = [-TAU, TAU],color= YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "f1517126-246d-4361-93fb-77d8620c5384",
    "metadata": {},
    "outputs": [
@@ -456,16 +416,14 @@
     "        mob.move_to(ORIGIN)\n",
     "        self.camera.frame.scale(1/6)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"CurvedArrow.png\"\n",
+    "image_full_name = \"CurvedArrow.png\"\n",
     "snippet = \"mob = CurvedArrow(LEFT,RIGHT,color= YELLOW)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "7a1d9778-4e1a-41a8-84a4-187a6550086a",
    "metadata": {},
    "outputs": [
@@ -489,16 +447,14 @@
     "        mob.move_to(ORIGIN)\n",
     "        self.camera.frame.scale(1/15)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"AnnotationDot.png\"\n",
+    "image_full_name = \"AnnotationDot.png\"\n",
     "snippet = \"mob = AnnotationDot(fill_color=RED)\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "id": "7893fe85-5177-4e3a-8d85-728e77bf2442",
    "metadata": {},
    "outputs": [
@@ -522,16 +478,14 @@
     "        mob.move_to(ORIGIN)\n",
     "        self.camera.frame.scale(1/10)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"LabeledDot.png\"\n",
+    "image_full_name = \"LabeledDot.png\"\n",
     "snippet = 'mob = LabeledDot(Tex(\"42\", color=GREEN))'\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "id": "facb7539-059f-4e30-8098-ac04b970666e",
    "metadata": {},
    "outputs": [
@@ -554,10 +508,8 @@
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/1.5)\n",
     "###******        \n",
-    "category = \"basics\"\n",
-    "image_file_name = \"ManimBanner.png\"\n",
+    "image_full_name = \"ManimBanner.png\"\n",
     "snippet = \"mob = ManimBanner()\"\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
@@ -571,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "id": "b96dd10b-3830-4208-a2fd-7fe9e1c3e577",
    "metadata": {},
    "outputs": [
@@ -598,28 +550,28 @@
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
-      "[NbConvertApp] Writing 11814 bytes to Mobjects_Basics.md\n"
+      "[NbConvertApp] Writing 10602 bytes to Mobjects_Basics.md\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'image000basics_Dot.png': 'd = Dot(color = YELLOW)',\n",
-       " 'image001basics_Circle.png': 'circle = Circle(color= YELLOW)',\n",
-       " 'image002basics_Arc.png': 'mob= Arc(radius=1.3, start_angle=-PI/16, angle=PI,color= YELLOW)',\n",
-       " 'image003basics_Ellipse.png': 'mob = Ellipse(color = YELLOW)',\n",
-       " 'image004basics_Square.png': 'square = Square(color= YELLOW)',\n",
-       " 'image005basics_Star.png': 'star = Star(color = YELLOW)',\n",
-       " 'image006basics_Triangle.png': 'mob = Triangle(color = YELLOW)',\n",
-       " 'image007basics_Line.png': 'line = Line(color= YELLOW)',\n",
-       " 'image008basics_DashedLine.png': 'mob = DashedLine(color= YELLOW)',\n",
-       " 'image009basics_Arrow.png': 'mob = Arrow(color= YELLOW)',\n",
-       " 'image010basics_DoubleArrow.png': 'mob = DoubleArrow(color= YELLOW)',\n",
-       " 'image011basics_ParametricFunction.png': 'mob = ParametricFunction(lambda t: [t,0.2*np.sin(10*t),0],t_range = [-TAU, TAU],color= YELLOW)',\n",
-       " 'image012basics_CurvedArrow.png': 'mob = CurvedArrow(LEFT,RIGHT,color= YELLOW)',\n",
-       " 'image013basics_AnnotationDot.png': 'mob = AnnotationDot(fill_color=RED)',\n",
-       " 'image014basics_LabeledDot.png': 'mob = LabeledDot(Tex(\"42\", color=GREEN))',\n",
-       " 'image015basics_ManimBanner.png': 'mob = ManimBanner()'}"
+       "{'Mobjects_Basics_000_Dot.png': 'd = Dot(color = YELLOW)',\n",
+       " 'Mobjects_Basics_001_Circle.png': 'circle = Circle(color= YELLOW)',\n",
+       " 'Mobjects_Basics_002_Arc.png': 'mob= Arc(radius=1.3, start_angle=-PI/16, angle=PI,color= YELLOW)',\n",
+       " 'Mobjects_Basics_003_Ellipse.png': 'mob = Ellipse(color = YELLOW)',\n",
+       " 'Mobjects_Basics_004_Square.png': 'square = Square(color= YELLOW)',\n",
+       " 'Mobjects_Basics_005_Star.png': 'star = Star(color = YELLOW)',\n",
+       " 'Mobjects_Basics_006_Triangle.png': 'mob = Triangle(color = YELLOW)',\n",
+       " 'Mobjects_Basics_007_Line.png': 'line = Line(color= YELLOW)',\n",
+       " 'Mobjects_Basics_008_DashedLine.png': 'mob = DashedLine(color= YELLOW)',\n",
+       " 'Mobjects_Basics_009_Arrow.png': 'mob = Arrow(color= YELLOW)',\n",
+       " 'Mobjects_Basics_010_DoubleArrow.png': 'mob = DoubleArrow(color= YELLOW)',\n",
+       " 'Mobjects_Basics_011_ParametricFunction.png': 'mob = ParametricFunction(lambda t: [t,0.2*np.sin(10*t),0],t_range = [-TAU, TAU],color= YELLOW)',\n",
+       " 'Mobjects_Basics_012_CurvedArrow.png': 'mob = CurvedArrow(LEFT,RIGHT,color= YELLOW)',\n",
+       " 'Mobjects_Basics_013_AnnotationDot.png': 'mob = AnnotationDot(fill_color=RED)',\n",
+       " 'Mobjects_Basics_014_LabeledDot.png': 'mob = LabeledDot(Tex(\"42\", color=GREEN))',\n",
+       " 'Mobjects_Basics_015_ManimBanner.png': 'mob = ManimBanner()'}"
       ]
      },
      "metadata": {},
@@ -643,7 +595,7 @@
     "dest_names = list(name_snippet_pairs.keys())\n",
     "new_keys = []\n",
     "for num, (p,des) in enumerate(zip(paths,dest_names)):\n",
-    "    to_path = target_directory /  f\"image{num:03}{des}\"   \n",
+    "    to_path = target_directory /  f\"{file_name}_{num:03}_{des}\"   \n",
     "    shutil.copy(p,  to_path)\n",
     "    new_keys.append(to_path.name)\n",
     "    \n",
@@ -657,14 +609,6 @@
     "!rm -r $folder_name\n",
     "!git add ."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6d5aa0c7-78c8-44c5-b215-41f92570f239",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
