--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
    "outputs": [],
@@ -14,23 +14,13 @@
     "import json\n",
     "\n",
     "params = \" -v WARNING -r 80,40 -s  --disable_caching Example\"\n",
-    "\n",
-    "#def latest_file(path: Path, pattern: str = \"*\"):\n",
-    "#   files = path.glob(pattern)\n",
-    "#   return max(files, key=lambda x: x.stat().st_ctime)\n",
-    "\n",
-    "def save_image(name):\n",
-    "    #from_file = latest_file(Path(\"./media/images/mobject-gallery\"))\n",
-    "    from_file = Path(\"./media/images/mobject-gallery/Example_ManimCE_v0.10.0.png\")\n",
-    "    to_file = Path.cwd() / name\n",
-    "    shutil.copy(from_file, to_file)\n",
     "    \n",
     "name_snippet_pairs = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -53,16 +43,14 @@
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/8)\n",
     "###******        \n",
-    "category = \"text\"\n",
-    "image_file_name = \"Text.png\"\n",
+    "image_full_name = \"Text.png\"\n",
     "snippet = 'mob = Text(\"Hello\", color=WHITE)'\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "38447001-be94-4df2-b101-645036c6c3a1",
    "metadata": {},
    "outputs": [
@@ -85,16 +73,14 @@
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/8)\n",
     "###******        \n",
-    "category = \"text\"\n",
-    "image_file_name = \"MathTex.png\"\n",
+    "image_full_name = \"MathTex.png\"\n",
     "snippet = 'mob = MathTex(r\"\\Psi(x)\", color=WHITE)'\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "f5c9059c-f2dc-4219-b5bb-f8bcea454323",
    "metadata": {},
    "outputs": [
@@ -118,10 +104,8 @@
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/10)\n",
     "###******        \n",
-    "category = \"text\"\n",
-    "image_file_name = \"MathTex2.png\"\n",
+    "image_full_name = \"MathTex2.png\"\n",
     "snippet = 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\") \\nmob.set_color_by_tex(\"x\", YELLOW)'\n",
-    "image_full_name = category + \"_\" + image_file_name\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
@@ -135,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
    "outputs": [
@@ -149,15 +133,15 @@
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Writing 3159 bytes to Mobjects_Text.md\n"
+      "[NbConvertApp] Writing 3208 bytes to Mobjects_Text.md\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'image000text_Text.png': 'mob = Text(\"Hello\", color=WHITE)',\n",
-       " 'image001text_MathTex.png': 'mob = MathTex(r\"\\\\Psi(x)\", color=WHITE)',\n",
-       " 'image002text_MathTex2.png': 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\") \\nmob.set_color_by_tex(\"x\", YELLOW)'}"
+       "{'Mobjects_Text_000_Text.png': 'mob = Text(\"Hello\", color=WHITE)',\n",
+       " 'Mobjects_Text_001_MathTex.png': 'mob = MathTex(r\"\\\\Psi(x)\", color=WHITE)',\n",
+       " 'Mobjects_Text_002_MathTex2.png': 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\") \\nmob.set_color_by_tex(\"x\", YELLOW)'}"
       ]
      },
      "metadata": {},
@@ -181,7 +165,7 @@
     "dest_names = list(name_snippet_pairs.keys())\n",
     "new_keys = []\n",
     "for num, (p,des) in enumerate(zip(paths,dest_names)):\n",
-    "    to_path = target_directory /  f\"image{num:03}{des}\"   \n",
+    "    to_path = target_directory /  f\"{file_name}_{num:03}_{des}\"   \n",
     "    shutil.copy(p,  to_path)\n",
     "    new_keys.append(to_path.name)\n",
     "    \n",
