--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -28,6 +28,7 @@
     "import shutil\n",
     "import time\n",
     "import json\n",
+    "import os\n",
     "\n",
     "params = \" -v WARNING -r 80,40 -s  --disable_caching Example\"\n",
     "    \n",
@@ -832,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "b96dd10b-3830-4208-a2fd-7fe9e1c3e577",
    "metadata": {},
    "outputs": [
@@ -868,7 +869,7 @@
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
-      "[NbConvertApp] Writing 17496 bytes to Mobjects_Basics.md\n"
+      "[NbConvertApp] Writing 16588 bytes to Mobjects_Basics.md\n"
      ]
     },
     {
@@ -917,7 +918,11 @@
     "target_directory = Path.cwd() / \"images\"\n",
     "target_directory.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "import os\n",
+    "prefix = file_name # delete files that where created in the past \n",
+    "for file in target_directory.rglob(\"*\"):\n",
+    "    if (prefix in file.name):\n",
+    "        file.unlink() \n",
+    "\n",
     "paths = sorted(Path(base_directory).iterdir(), key=os.path.getmtime)\n",
     "dest_names = list(name_snippet_pairs.keys())\n",
     "new_keys = []\n",
