--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -181,6 +181,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 85,
+   "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_name = \"Mobjects_Text\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 84,
    "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
@@ -215,7 +225,6 @@
     }
    ],
    "source": [
-    "file_name = \"Mobjects_Text\"\n",
     "folder_name = file_name + \"_files\"\n",
     "notebook_name = file_name + \".ipynb\"\n",
     "markdown_name = file_name + \".md\"\n",
