--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "bfe7589d-7743-4dd2-98ae-291eb6f0a45e",
    "metadata": {},
    "outputs": [],
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "224d81aa-cc4d-41a5-b329-c1f8375e89c0",
    "metadata": {},
    "outputs": [],
@@ -1050,10 +1050,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "b96dd10b-3830-4208-a2fd-7fe9e1c3e577",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: Mobjects_Basics_files: No such file or directory\n",
+      "[NbConvertApp] Converting notebook Mobjects_Basics.ipynb to markdown\n",
+      "[NbConvertApp] Support files will be in Mobjects_Basics_files/\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Making directory Mobjects_Basics_files\n",
+      "[NbConvertApp] Writing 16744 bytes to Mobjects_Basics.md\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Mobjects_Basics_000_Dot.png': 'd = Dot(color = YELLOW)',\n",
+       " 'Mobjects_Basics_001_Circle.png': 'mob = Circle(fill_opacity=1, fill_color= ORANGE, stroke_color=YELLOW)',\n",
+       " 'Mobjects_Basics_002_Annulus.png': 'mob = Annulus(inner_radius=0.5, outer_radius=1.2,fill_color= DARK_BLUE, stroke_color=YELLOW, stroke_width=2)',\n",
+       " 'Mobjects_Basics_003_Sector.png': 'mob = Sector(inner_radius=0.5, outer_radius=1.2,fill_color= DARK_BLUE, stroke_color=YELLOW, stroke_width=2)',\n",
+       " 'Mobjects_Basics_004_Arc.png': 'mob= Arc(radius=1.3, start_angle=-PI/16, angle=PI,color= YELLOW)',\n",
+       " 'Mobjects_Basics_005_ArcBetweenPoints.png': 'mob= ArcBetweenPoints(start=2 * RIGHT, end=2*LEFT, stroke_color=YELLOW)',\n",
+       " 'Mobjects_Basics_006_Ellipse.png': 'mob = Ellipse(color = YELLOW)',\n",
+       " 'Mobjects_Basics_007_Square.png': 'square = Square(color= YELLOW)',\n",
+       " 'Mobjects_Basics_008_Elbow.png': 'Elbow(width=0.5, angle=0*DEGREES,color= YELLOW)',\n",
+       " 'Mobjects_Basics_009_RightAngle.png': 'line1 = Line( ORIGIN, RIGHT )\\nline2 = Line( ORIGIN, UP )\\nmob = RightAngle(line1, line2, color=YELLOW, stroke_width=7)',\n",
+       " 'Mobjects_Basics_010_Star.png': 'star = Star(color = YELLOW)',\n",
+       " 'Mobjects_Basics_011_Cross.png': 'Cross(stroke_color = YELLOW)',\n",
+       " 'Mobjects_Basics_012_Triangle.png': 'mob = Triangle(color = YELLOW)',\n",
+       " 'Mobjects_Basics_013_RegularPolygram5.png': 'mob= RegularPolygram(5,color= YELLOW)',\n",
+       " 'Mobjects_Basics_014_RegularPolygram6.png': 'mob= RegularPolygram(6,color= YELLOW)',\n",
+       " 'Mobjects_Basics_015_RegularPolygon5.png': 'mob= RegularPolygon(5,color= YELLOW)',\n",
+       " 'Mobjects_Basics_016_RegularPolygon6.png': 'mob= RegularPolygon(6,color= YELLOW)',\n",
+       " 'Mobjects_Basics_017_CutOut.png': 's1 = Square().scale(2.5)\\ns2 = Star().shift(LEFT)\\ns3 = Circle().shift(RIGHT)\\nc = Cutout(s1, s2, s3, fill_opacity=1, color=YELLOW)',\n",
+       " 'Mobjects_Basics_018_Line.png': 'line = Line(color= YELLOW)',\n",
+       " 'Mobjects_Basics_019_DashedLine.png': 'mob = DashedLine(color= YELLOW)',\n",
+       " 'Mobjects_Basics_020_Arrow.png': 'mob = Arrow(color= YELLOW)',\n",
+       " 'Mobjects_Basics_021_DoubleArrow.png': 'mob = DoubleArrow(color= YELLOW)',\n",
+       " 'Mobjects_Basics_022_ParametricFunction.png': 'mob = ParametricFunction(lambda t: [t,0.2*np.sin(10*t),0],t_range = [-TAU, TAU],color= YELLOW)',\n",
+       " 'Mobjects_Basics_023_CubicBezier.png': 'p1 = [-3, 1, 0]\\np1b=  p1 + 5 * RIGHT + 2 * UP\\np2 = [3, -1, 0]\\np2b = p2 + 5 * LEFT\\nbezier = CubicBezier(p1,p1b, p2b, p2, color=YELLOW)',\n",
+       " 'Mobjects_Basics_024_CurvedArrow.png': 'mob = CurvedArrow(LEFT,RIGHT,color= YELLOW)',\n",
+       " 'Mobjects_Basics_025_Brace.png': 'mob = Brace(LEFT,RIGHT,color= YELLOW)',\n",
+       " 'Mobjects_Basics_026_ArcBrace.png': 'arc = Arc(radius=0.5,start_angle=0,angle=5*PI/6)\\nbrace = ArcBrace(arc).set_color(YELLOW)',\n",
+       " 'Mobjects_Basics_027_AnnotationDot.png': 'mob = AnnotationDot(fill_color=RED)',\n",
+       " 'Mobjects_Basics_028_LabeledDot.png': 'mob = LabeledDot(Tex(\"42\", color=BLACK), color=YELLOW)',\n",
+       " 'Mobjects_Basics_029_ManimBanner.png': 'mob = ManimBanner()',\n",
+       " 'Mobjects_Basics_030_ImageMobject.png': 'mob = ImageMobject(image)'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "folder_name = file_name + \"_files\"\n",
     "notebook_name = file_name + \".ipynb\"\n",
