added new way of code with three """strings"""

--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -211,9 +211,13 @@
     "        mob.set_color_by_tex(\"x\", YELLOW)\n",
     "        self.add(mob)\n",
     "        self.camera.frame.scale(1/10)\n",
-    "###******        \n",
+    "###******\n",
+    "\n",
     "image_full_name = \"MathTex2.png\"\n",
-    "snippet = 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\") \\nmob.set_color_by_tex(\"x\", YELLOW)'\n",
+    "snippet = \"\"\"\n",
+    "mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\")\n",
+    "mob.set_color_by_tex(\"x\", YELLOW)\n",
+    "\"\"\"\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
@@ -227,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
    "metadata": {},
    "outputs": [],
@@ -239,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
    "metadata": {},
    "outputs": [],
@@ -252,15 +256,7 @@
    "execution_count": null,
    "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: Mobjects_Text_files: No such file or directory\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "folder_name = file_name + \"_files\"\n",
     "notebook_name = file_name + \".ipynb\"\n",
