renamed from image to static

--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -1196,7 +1196,9 @@
     "        self.camera.frame.scale(1/1.5)\n",
     "###******        \n",
     "image_full_name = \"ImageMobject.png\"\n",
-    "snippet = \"mob = ImageMobject(image)\"\n",
+    "snippet = \"\"\"\n",
+    "mob = ImageMobject(image)\n",
+    "\"\"\"\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
@@ -1280,7 +1282,7 @@
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
-      "[NbConvertApp] Writing 19621 bytes to Mobjects_Basics.md\n"
+      "[NbConvertApp] Writing 19766 bytes to Mobjects_Basics.md\n"
      ]
     },
     {
@@ -1337,7 +1339,7 @@
     "!jupyter nbconvert $notebook_name --to markdown\n",
     "!rm -r $markdown_name\n",
     "base_directory = Path.cwd() / folder_name\n",
-    "target_directory = Path.cwd() / \"images\"\n",
+    "target_directory = Path.cwd() / \"_static\"\n",
     "target_directory.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "prefix = file_name # delete files that where created in the past \n",
@@ -1356,13 +1358,25 @@
     "new_name_snippet_pairs ={} \n",
     "new_values = list(name_snippet_pairs.values())\n",
     "for key, value in zip(new_keys,new_values):\n",
+    "    if value.startswith(\"\\n\"):\n",
+    "        value = value[1:]\n",
+    "    if value.endswith(\"\\n\"):\n",
+    "        value = value[:-1]\n",
     "    new_name_snippet_pairs[key]=value\n",
-    "with open(f'{file_name}.json', 'w') as fp:\n",
+    "with open(f'_static/{file_name}.json', 'w') as fp:\n",
     "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
     "display(new_name_snippet_pairs)\n",
     "!rm -r $folder_name\n",
     "!git add ."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cdb3ae6-e42b-4173-982d-b8f73902559c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
