--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -307,7 +307,7 @@
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Writing 4865 bytes to Mobjects_Text.md\n"
+      "[NbConvertApp] Writing 4954 bytes to Mobjects_Text.md\n"
      ]
     },
     {
@@ -318,8 +318,8 @@
        " 'Mobjects_Text_002_Underline.png': 't = Tex(\"YES\")\\nul = Underline(t, color=YELLOW)',\n",
        " 'Mobjects_Text_003_Bold.png': 'mob = Text(\"NO\", color=YELLOW,weight=BOLD)',\n",
        " 'Mobjects_Text_004_MathTex.png': 'mob = MathTex(r\"\\\\Psi(x)\", color=WHITE)',\n",
-       " 'Mobjects_Text_005_MathTex2.png': '\\nmob = MathTex(r\"e^x\",substrings_to_isolate=\"x\")\\nmob.set_color_by_tex(\"x\", YELLOW)\\n',\n",
-       " 'Mobjects_Text_006_Check.png': '\\ncheck= Tex(r\"\\\\checkmark\", color= GREEN, stroke_width=8).scale(3)\\ncheck.stretch(0.8, dim = 1)\\ncheck.stretch(1.1, dim = 0)\\n'}"
+       " 'Mobjects_Text_005_MathTex2.png': 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\")\\nmob.set_color_by_tex(\"x\", YELLOW)',\n",
+       " 'Mobjects_Text_006_Check.png': 'check= Tex(r\"\\\\checkmark\", color= GREEN, stroke_width=8).scale(3)\\ncheck.stretch(0.8, dim = 1)\\ncheck.stretch(1.1, dim = 0)'}"
       ]
      },
      "metadata": {},
@@ -334,7 +334,7 @@
     "!jupyter nbconvert $notebook_name --to markdown\n",
     "!rm -r $markdown_name\n",
     "base_directory = Path.cwd() / folder_name\n",
-    "target_directory = Path.cwd() / \"images\"\n",
+    "target_directory = Path.cwd() / \"_static\"\n",
     "target_directory.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "prefix = file_name # delete files that where created in the past \n",
@@ -353,29 +353,17 @@
     "new_name_snippet_pairs ={} \n",
     "new_values = list(name_snippet_pairs.values())\n",
     "for key, value in zip(new_keys,new_values):\n",
+    "    if value.startswith(\"\\n\"):\n",
+    "        value = value[1:]\n",
+    "    if value.endswith(\"\\n\"):\n",
+    "        value = value[:-1]\n",
     "    new_name_snippet_pairs[key]=value\n",
-    "with open(f'{file_name}.json', 'w') as fp:\n",
+    "with open(f'_static/{file_name}.json', 'w') as fp:\n",
     "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
     "display(new_name_snippet_pairs)\n",
     "!rm -r $folder_name\n",
     "!git add ."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b406bbb5-cf73-4183-a198-3ce788f32aeb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f22315d-1668-49ec-b8ff-dce483d15631",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
