new saving method

--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -1217,9 +1217,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install keyboard\n",
-    "import keyboard\n",
-    "keyboard.press_and_release('command+s')"
+    "#pip install ipylab\n",
+    "from ipylab import JupyterFrontEnd\n",
+    "\n",
+    "app = JupyterFrontEnd()\n",
+    "app.commands.execute('docmanager:save')"
    ]
   },
   {
@@ -1282,7 +1284,7 @@
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
-      "[NbConvertApp] Writing 19766 bytes to Mobjects_Basics.md\n"
+      "[NbConvertApp] Writing 19808 bytes to Mobjects_Basics.md\n"
      ]
     },
     {
