--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -267,19 +267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pip install keyboard\n",
-    "import keyboard\n",
-    "keyboard.press_and_release('command+s')"
+    "#pip install ipylab\n",
+    "from ipylab import JupyterFrontEnd\n",
+    "\n",
+    "app = JupyterFrontEnd()\n",
+    "app.commands.execute('docmanager:save')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
    "metadata": {},
    "outputs": [],
@@ -289,43 +291,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: Mobjects_Text_files: No such file or directory\n",
-      "[NbConvertApp] Converting notebook Mobjects_Text.ipynb to markdown\n",
-      "[NbConvertApp] Support files will be in Mobjects_Text_files/\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Writing 4954 bytes to Mobjects_Text.md\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Mobjects_Text_000_Text1.png': 'mob = Text(\"Hello\", color=WHITE)',\n",
-       " 'Mobjects_Text_001_Text2.png': 'mob = Text(\"World\", color=YELLOW,slant=ITALIC)',\n",
-       " 'Mobjects_Text_002_Underline.png': 't = Tex(\"YES\")\\nul = Underline(t, color=YELLOW)',\n",
-       " 'Mobjects_Text_003_Bold.png': 'mob = Text(\"NO\", color=YELLOW,weight=BOLD)',\n",
-       " 'Mobjects_Text_004_MathTex.png': 'mob = MathTex(r\"\\\\Psi(x)\", color=WHITE)',\n",
-       " 'Mobjects_Text_005_MathTex2.png': 'mob = MathTex(r\"e^x\",substrings_to_isolate=\"x\")\\nmob.set_color_by_tex(\"x\", YELLOW)',\n",
-       " 'Mobjects_Text_006_Check.png': 'check= Tex(r\"\\\\checkmark\", color= GREEN, stroke_width=8).scale(3)\\ncheck.stretch(0.8, dim = 1)\\ncheck.stretch(1.1, dim = 0)'}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "folder_name = file_name + \"_files\"\n",
     "notebook_name = file_name + \".ipynb\"\n",
@@ -364,6 +333,14 @@
     "!rm -r $folder_name\n",
     "!git add ."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be8e4efe-ee83-4276-8861-58558890748b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
