--- a/Mobjects_Basics.ipynb
+++ b/Mobjects_Basics.ipynb
@@ -1284,7 +1284,7 @@
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
       "[NbConvertApp] Making directory Mobjects_Basics_files\n",
-      "[NbConvertApp] Writing 19808 bytes to Mobjects_Basics.md\n"
+      "[NbConvertApp] Writing 19802 bytes to Mobjects_Basics.md\n"
      ]
     },
     {
@@ -1341,7 +1341,7 @@
     "!jupyter nbconvert $notebook_name --to markdown\n",
     "!rm -r $markdown_name\n",
     "base_directory = Path.cwd() / folder_name\n",
-    "target_directory = Path.cwd() / \"_static\"\n",
+    "target_directory = Path.cwd() / \"imgs\"\n",
     "target_directory.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "prefix = file_name # delete files that where created in the past \n",
@@ -1365,7 +1365,7 @@
     "    if value.endswith(\"\\n\"):\n",
     "        value = value[:-1]\n",
     "    new_name_snippet_pairs[key]=value\n",
-    "with open(f'_static/{file_name}.json', 'w') as fp:\n",
+    "with open(f'imgs/{file_name}.json', 'w') as fp:\n",
     "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
     "display(new_name_snippet_pairs)\n",
     "!rm -r $folder_name\n",
