--- a/Mobjects_Text.ipynb
+++ b/Mobjects_Text.ipynb
@@ -309,7 +309,7 @@
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
       "[NbConvertApp] Making directory Mobjects_Text_files\n",
-      "[NbConvertApp] Writing 5013 bytes to Mobjects_Text.md\n"
+      "[NbConvertApp] Writing 5007 bytes to Mobjects_Text.md\n"
      ]
     },
     {
@@ -336,7 +336,7 @@
     "!jupyter nbconvert $notebook_name --to markdown\n",
     "!rm -r $markdown_name\n",
     "base_directory = Path.cwd() / folder_name\n",
-    "target_directory = Path.cwd() / \"_static\"\n",
+    "target_directory = Path.cwd() / \"imgs\"\n",
     "target_directory.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "prefix = file_name # delete files that where created in the past \n",
@@ -360,7 +360,7 @@
     "    if value.endswith(\"\\n\"):\n",
     "        value = value[:-1]\n",
     "    new_name_snippet_pairs[key]=value\n",
-    "with open(f'_static/{file_name}.json', 'w') as fp:\n",
+    "with open(f'imgs/{file_name}.json', 'w') as fp:\n",
     "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
     "display(new_name_snippet_pairs)\n",
     "!rm -r $folder_name\n",
