fixed raw string

--- a/Camera_and_Style.ipynb
+++ b/Camera_and_Style.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "fd9e6794-9c74-498f-afa5-6f385816abdd",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
     "\n",
     "###******        \n",
     "image_full_name = \"SurroundingRectangle.png\"\n",
-    "snippet = \"\"\"\n",
+    "snippet = r\"\"\"\n",
     "inner = Tex(r\"\\textbf{Hello}\", color=WHITE)\n",
     "mob = SurroundingRectangle(inner, corner_radius=0.1)\n",
     "\"\"\"\n",
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,15 @@
    "execution_count": null,
    "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: Camera_and_Style_files: No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "folder_name = file_name + \"_files\"\n",
     "notebook_name = file_name + \".ipynb\"\n",
