--- a/Camera_and_Style.ipynb
+++ b/Camera_and_Style.ipynb
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
    "outputs": [
@@ -321,8 +321,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rm: Camera_and_Style_files: No such file or directory\n"
+      "rm: Camera_and_Style_files: No such file or directory\n",
+      "[NbConvertApp] Converting notebook Camera_and_Style.ipynb to markdown\n",
+      "[NbConvertApp] Support files will be in Camera_and_Style_files/\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Making directory Camera_and_Style_files\n",
+      "[NbConvertApp] Writing 5500 bytes to Camera_and_Style.md\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Camera_and_Style_000_Background.png': 'self.camera.background_color = YELLOW',\n",
+       " 'Camera_and_Style_001_ZoomIN.png': '# Scene needs to be \"class MyExample(ZoomedScene)\"\\nself.camera.frame.scale(0.6)',\n",
+       " 'Camera_and_Style_002_ZoomOUT.png': '# Scene needs to be \"class MyExample(ZoomedScene)\"\\nself.camera.frame.scale(1.2)',\n",
+       " 'Camera_and_Style_003_CameraLEFT.png': '# Scene needs to be \"class MyExample(ZoomedScene)\"\\nself.camera.frame.shift(LEFT*0.5)',\n",
+       " 'Camera_and_Style_004_CameraUP.png': '# Scene needs to be \"class MyExample(ZoomedScene)\"\\nself.camera.frame.shift(UP*0.4)',\n",
+       " 'Camera_and_Style_005_FullScreenRectangle.png': 'mob = FullScreenRectangle(stroke_width=200, color= YELLOW)',\n",
+       " 'Camera_and_Style_006_SurroundingRectangle.png': 'inner = Tex(r\"\\\\textbf{Hello}\", color=WHITE)\\nmob = SurroundingRectangle(inner, corner_radius=0.1)'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
