--- a/Plots.ipynb
+++ b/Plots.ipynb
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
    "metadata": {},
    "outputs": [],
@@ -391,10 +391,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rm: Plots_files: No such file or directory\n",
+      "[NbConvertApp] Converting notebook Plots.ipynb to markdown\n",
+      "[NbConvertApp] Support files will be in Plots_files/\n",
+      "[NbConvertApp] Making directory Plots_files\n",
+      "[NbConvertApp] Making directory Plots_files\n",
+      "[NbConvertApp] Making directory Plots_files\n",
+      "[NbConvertApp] Making directory Plots_files\n",
+      "[NbConvertApp] Making directory Plots_files\n",
+      "[NbConvertApp] Making directory Plots_files\n",
+      "[NbConvertApp] Making directory Plots_files\n",
+      "[NbConvertApp] Writing 9079 bytes to Plots.md\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Plots_000_Axes_x_y_range.png': 'ax = Axes(x_range=[-1, 10], y_range=[-1, 10], x_length=3, y_length=3)\\nlabels = ax.get_axis_labels(\\n    Text(\"x-axis\"), Text(\"y-axis\")\\n)',\n",
+       " 'Plots_001_Axes_e_x.png': 'axes  =Axes(x_range=[-8,9,2], y_range=[-6,7,2], x_length=4, y_length=4,\\n            axis_config={\"include_numbers\":True,\"numbers_to_exclude\":[0]},\\n            x_axis_config={\"color\":PINK}, y_axis_config={\"color\":ORANGE})\\naxes_label = axes.get_axis_labels(x_label=\"x\", y_label=\"y\")\\ngraph = axes.get_graph(lambda x: np.e**x,x_range=[-8,2], color= GREEN_E)\\ngraph_label = axes.get_graph_label(graph, label=\"e^x\", color=YELLOW)',\n",
+       " 'Plots_002_NumberPlane.png': 'number_plane = NumberPlane(\\n            x_range=[-10, 10, 1],\\n            y_range=[-10, 10, 1],\\n            background_line_style={\\n                \"stroke_color\": TEAL,\\n                \"stroke_width\": 4,\\n                \"stroke_opacity\": 0.6\\n            }\\n        )',\n",
+       " 'Plots_003_PolarPlane.png': 'polarplane_pi = PolarPlane(\\n            azimuth_units=\"PI radians\",\\n            size=6,\\n            azimuth_label_font_size=33.6,\\n            radius_config={\"font_size\": 33.6},\\n        ).add_coordinates()',\n",
+       " 'Plots_004_Graph_with_Number.png': 'vertices = [1, 2, 3, 4, 5, 6, 7, 8]\\nedges = [(1, 7), (1, 8), (2, 3), (2, 4), (2, 5),\\n         (2, 8), (3, 4), (6, 1), (6, 2),\\n         (6, 3), (7, 2), (7, 4)]\\ng = Graph(vertices, edges, layout=\"circular\", layout_scale=3,\\n          labels=True, vertex_config={7: {\"fill_color\": RED}},\\n          edge_config={(1, 7): {\"stroke_color\": RED},\\n                       (2, 7): {\"stroke_color\": RED},\\n                       (4, 7): {\"stroke_color\": RED}})',\n",
+       " 'Plots_005_StreamLines.png': 'func = lambda pos: ((pos[0]*UR+pos[1]*LEFT) - pos)\\nmob= StreamLines(func)\\nself.add(mob)',\n",
+       " 'Plots_006_ArrowVectorField.png': 'func = lambda pos: np.sin(pos[1])*RIGHT+np.cos(pos[0])*UP\\nmob = ArrowVectorField(func)'}"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "folder_name = file_name + \"_files\"\n",
     "notebook_name = file_name + \".ipynb\"\n",
