--- a/Plots.ipynb
+++ b/Plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
     "import json\n",
     "import os\n",
     "scale_res=1\n",
-    "#scale_res=4\n",
+    "scale_res=4\n",
     "\n",
     "params = f\" -v WARNING -r {170*scale_res},{170*scale_res} -s  --disable_caching Example\"\n",
     "\n",
