--- a/Animations.ipynb
+++ b/Animations.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
    "outputs": [],
@@ -16,26 +16,27 @@
     "scale_res=1\n",
     "scale_res=4\n",
     "\n",
-    "params = f\" -v WARNING -r {170*scale_res},{170*scale_res} -i  --disable_caching Example\"\n",
+    "paramsgif = f\" -v WARNING -r {170*scale_res},{170*scale_res} -i  --disable_caching Example\"\n",
+    "params = f\" -v WARNING -r {170*scale_res},{170*scale_res}  -s --disable_caching Example\"\n",
     "\n",
     "name_snippet_pairs = {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "60efe648-bd55-4190-9bd3-3fd595d83ac9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[09/20/21 12:32:18] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> --save_as_gif is deprecated, please use           <a href=\"file:///Users/jan-hendrik/projects/manim/manim/cli/render/commands.py\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">commands.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:62</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[09/20/21 13:30:30] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> --save_as_gif is deprecated, please use           <a href=\"file:///Users/jan-hendrik/projects/manim/manim/cli/render/commands.py\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">commands.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:62</span>\n",
        "                             --<span style=\"color: #808000; text-decoration-color: #808000\">format</span>=<span style=\"color: #800080; text-decoration-color: #800080\">gif</span> instead!                                           \n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m[09/20/21 12:32:18]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m --save_as_gif is deprecated, please use           \u001b]8;id=1632133938.703637-904310;file:///Users/jan-hendrik/projects/manim/manim/cli/render/commands.py\u001b\\\u001b[2mcommands.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:62\u001b[0m\n",
+       "\u001b[2;36m[09/20/21 13:30:30]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m --save_as_gif is deprecated, please use           \u001b]8;id=1632137430.7102542-328184;file:///Users/jan-hendrik/projects/manim/manim/cli/render/commands.py\u001b\\\u001b[2mcommands.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:62\u001b[0m\n",
        "                             --\u001b[33mformat\u001b[0m=\u001b[35mgif\u001b[0m instead!                                           \n"
       ]
      },
@@ -61,7 +62,7 @@
     }
    ],
    "source": [
-    "%%manim $params\n",
+    "%%manim $paramsgif\n",
     "class Example(ZoomedScene):\n",
     "    def construct(self):\n",
     "        tex = Tex(\"Indicate\").scale(5)\n",
@@ -76,25 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[09/20/21 12:32:12] </span><span style=\"color: #800000; text-decoration-color: #800000\">WARNING </span> --save_as_gif is deprecated, please use           <a href=\"file:///Users/jan-hendrik/projects/manim/manim/cli/render/commands.py\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">commands.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:62</span>\n",
-       "                             --<span style=\"color: #808000; text-decoration-color: #808000\">format</span>=<span style=\"color: #800080; text-decoration-color: #800080\">gif</span> instead!                                           \n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m[09/20/21 12:32:12]\u001b[0m\u001b[2;36m \u001b[0m\u001b[31mWARNING \u001b[0m --save_as_gif is deprecated, please use           \u001b]8;id=1632133932.089571-275412;file:///Users/jan-hendrik/projects/manim/manim/cli/render/commands.py\u001b\\\u001b[2mcommands.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:62\u001b[0m\n",
-       "                             --\u001b[33mformat\u001b[0m=\u001b[35mgif\u001b[0m instead!                                           \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -121,122 +107,34 @@
     "        self.play(Indicate(tex))\n",
     "        self.wait()\n",
     "image_full_name = \"inidcate.gif\"\n",
-    "snippet = r\"\"\"\n",
-    "self.play(Indicate(tex))\n",
-    "\"\"\"\n",
     "name_snippet_pairs[image_full_name] = snippet"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "7150aa82-899b-49cd-bcad-344ef8bb3e9c",
-   "metadata": {},
-   "source": [
-    "# Save here!"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#pip install ipylab\n",
-    "from ipylab import JupyterFrontEnd\n",
-    "\n",
-    "app = JupyterFrontEnd()\n",
-    "app.commands.execute('docmanager:save')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "a0a9f13e-13ec-4a03-b5ad-981fcd535dac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_name = \"Animations\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "312f4676-113b-464d-b7d5-03e0c7ca3c93",
+   "execution_count": 8,
+   "id": "3003d30d-96bb-411b-9b7a-ba115581bd6b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rm: Animations_files: No such file or directory\n",
-      "[NbConvertApp] Converting notebook Animations.ipynb to markdown\n",
-      "[NbConvertApp] Support files will be in Animations_files/\n",
-      "[NbConvertApp] Making directory Animations_files\n",
-      "[NbConvertApp] Writing 4615 bytes to Animations.md\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'Animations_000_inidcate.gif': 'self.play(Indicate(tex))'}"
+       "{'inidcate.gif': '\\nself.play(Indicate(tex))\\n'}"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "folder_name = file_name + \"_files\"\n",
-    "notebook_name = file_name + \".ipynb\"\n",
-    "markdown_name = file_name + \".md\"\n",
-    "!rm -r $folder_name\n",
-    "!jupyter nbconvert $notebook_name --to markdown\n",
-    "!rm -r $markdown_name\n",
-    "base_directory = Path.cwd() / folder_name\n",
-    "target_directory = Path.cwd() / \"imgs\"\n",
-    "target_directory.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "prefix = file_name # delete files that where created in the past \n",
-    "for file in target_directory.rglob(\"*\"):\n",
-    "    if (prefix in file.name):\n",
-    "        file.unlink() \n",
-    "\n",
-    "paths = sorted(Path(base_directory).iterdir(), key=os.path.getmtime)\n",
-    "dest_names = list(name_snippet_pairs.keys())\n",
-    "new_keys = []\n",
-    "for num, (p,des) in enumerate(zip(paths,dest_names)):\n",
-    "    to_path = target_directory /  f\"{file_name}_{num:03}_{des}\"   \n",
-    "    shutil.copy(p,  to_path)\n",
-    "    new_keys.append(to_path.name)\n",
-    "    \n",
-    "new_name_snippet_pairs ={} \n",
-    "new_values = list(name_snippet_pairs.values())\n",
-    "for key, value in zip(new_keys,new_values):\n",
-    "    if value.startswith(\"\\n\"):\n",
-    "        value = value[1:]\n",
-    "    if value.endswith(\"\\n\"):\n",
-    "        value = value[:-1]\n",
-    "    new_name_snippet_pairs[key]=value\n",
-    "with open(f'imgs/{file_name}.json', 'w') as fp:\n",
-    "    json.dump(new_name_snippet_pairs, fp,indent=2)\n",
-    "display(new_name_snippet_pairs)\n",
-    "!rm -r $folder_name\n",
-    "!git add ."
+    "name_snippet_pairs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8e4efe-ee83-4276-8861-58558890748b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9fcb9430-2861-4513-be77-0e5d54916bfe",
+   "id": "b8608af0-210c-4a34-b945-8773d692f32b",
    "metadata": {},
    "outputs": [],
    "source": []
