--- a/Plots.ipynb
+++ b/Plots.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "e4ba2c91-b12e-4d60-98e6-7e51046d5745",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.12.0</span>\n",
+       "\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m12.0\u001b[0m\n",
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from manim import *\n",
     "from pathlib import Path\n",
@@ -23,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "0fd61567-423c-4c00-a242-1ab6c8dd9787",
    "metadata": {},
    "outputs": [
@@ -79,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "b8d3c13e-e854-4983-82b4-45ddfc804dae",
    "metadata": {},
    "outputs": [
@@ -175,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "35509390-2b98-45e7-885e-f7d0a9700b49",
    "metadata": {},
    "outputs": [
@@ -215,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "9fe21ed2-4d17-4d2a-979a-d8de5af532b0",
    "metadata": {},
    "outputs": [
@@ -257,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "651c7d5e-2fc7-4672-aa57-5cc38452cced",
    "metadata": {},
    "outputs": [
@@ -305,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "b34b2a9b-43bc-4732-aac5-2901ba85f1df",
    "metadata": {},
    "outputs": [
@@ -340,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "f216076f-1189-47ae-913b-ed509627dd45",
    "metadata": {},
    "outputs": [
@@ -392,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "53529e00-0617-4ce7-bdbb-fe76d8ae6ad4",
    "metadata": {},
    "outputs": [],
